--- a/stle.css
+++ b/stle.css
@@ -7,6 +7,11 @@ body{
     background-color: #f0f2f5;
 }
 
+a{
+    text-decoration: none;
+}
+
+
 
 .columna{
     display: grid;
@@ -104,15 +109,27 @@ footer{
 }
 
 
-
-
-
-
 .flexul{
     display: flex; 
     justify-content: space-evenly;
     list-style: none;
     font-size: 12px;
+    color: #737373;
 }
+
+.texta{
+    font-weight: bold;
+}
+
+.texta:visited{
+    color: #000;
+}
+
+.textf{
+    color: #737373;
+    font-size: 12px;
+}
+
+
 
 
